--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <header>
+
+    </header>
+
+    <main>
+        <ul class="pokemon-list"></ul>
+    </main>
+
+    <footer>
+
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
