Revert "Update index.html"
This reverts commit 93e281430b327fc7283b5d1b66685f3351d64ee9.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <ul class='pokemon-list'></ul>
+        <ul class="pokemon-list"></ul>
     </main>
 
     <footer>
