--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body>     
-  <h1>Pokedex</h1>
-  <ul class="pokemon-list"></ul>
-  <div id="modal-container"></div>
+<body>
+  <header>
+
+  </header>
+  
+  <main>
+    <h1>Pokedex</h1>
+    <ul class="pokemon-list"></ul>
+    <div id="modal-container"></div>
+  </main>
+
+  <footer>
+    
+  </footer>
+
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch-polyfill.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
