--- a/index.html
+++ b/index.html
@@ -29,35 +29,53 @@
   </head>
 
   <body>
-    <h1>Pokedex</h1>
-    <ul class="pokemon-list"></ul>
+    <header>
+      <!-- Image and text -->
+      <nav class="navbar" style="background-color: #fbfdff;">     
+        <a class="navbar-brand" href="#">
+          <img
+            src="img/pokedex.svg"
+            width="50"
+            height="50"
+            class="d-inline-block align-top"
+            alt="pokedex app"
+          />
+          Pokedex
+        </a>
+      </nav>
+    </header>
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="modal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="modal-title"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modal-title">Modal title</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
+    <main>
+      <ul class="pokemon-list list-group"></ul>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="modal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="modal-title"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modal-title">Modal title</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body"></div>
           </div>
-          <div class="modal-body"></div>
         </div>
       </div>
-    </div>
+    </main>
+
+    <footer></footer>
 
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
