--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header>
       <!-- Image and text -->
-      <nav class="navbar" style="background-color: #fbfdff;">     
+      <nav class="navbar" style="background-color: #fbfdff">
         <a class="navbar-brand" href="#">
           <img
             src="img/pokedex.svg"
