--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </header>
 
     <main>
+      <!-- columns for ul -->
+      <div class="pokemon-list row"></div>
       <ul class="pokemon-list list-group"></ul>
       <!-- Modal -->
       <div
